--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "gleichmä",
     "Hooke'schen",
     "Huygens'sche",
+    "Linearitätsfehler",
     "mathbb",
     "mathscr",
     "Oszillators",
